# libft

./: .gitignore  CMakeLists.txt  Makefile  auteur  compile_flags.txt  libft-config.cmake.in
include/: CMakeLists.txt  get_next_line.h  libft.h  libft_cdefs.h  libft_printf.h  libft_types.h  printf.h
include/libft/: cdefs.h  types.h
src/: .dir-locals.el  CMakeLists.txt  ft_abs.c  ft_alphasort.c  ft_asprintf.c  ft_atoi.c  ft_basename.c  ft_bswap32.c  ft_bswap_32.c  ft_bzero.c  ft_calloc.c  ft_complex_abs.c  ft_complex_add.c  ft_complex_arg.c  ft_complex_div.c  ft_complex_equ.c  ft_complex_exp.c  ft_complex_init.c  ft_complex_log.c  ft_complex_mul.c  ft_complex_pow.c  ft_complex_powi.c  ft_complex_sqrt.c  ft_complex_sub.c  ft_dprintf.c  ft_escape.c  ft_execvp.c  ft_fmin.c  ft_freeaddrinfo.c  ft_fsgnl.c  ft_fsquarel.c  ft_getenv.c  ft_image_clear.c  ft_image_color.c  ft_image_create.c  ft_image_create_xpm.c  ft_image_destroy.c  ft_image_pixel_get.c  ft_image_pixel_put.c  ft_image_write_ppm.c  (+126 more)
src/printf/: ft_vdprintf.c  printf.c
